--- a/ML_2021_set6.ipynb
+++ b/ML_2021_set6.ipynb
@@ -455,13 +455,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# THE KEY POINT OF THE PROBLEM !\n",
+    "\n",
     "In the light of the above p_MAP that maximises the posterior distribution is given by:\n",
     "\n",
-    "$$\\text{p_MAP} = \\text{argmax pdf}(p|\\alpha+k,\\beta+(n-k)) = \\text{mode}(\\text{pdf}(p|\\alpha + k,\\beta + n-k)) = \\frac{(\\alpha+k-1)}{(\\alpha + k + \\beta + n-k -2)},$$ \n",
+    "(9) $$\\text{p_MAP} = \\text{argmax pdf}(p|\\alpha+k,\\beta+(n-k)) = \\text{mode}(\\text{pdf}(p|\\alpha + k,\\beta + n-k)) =\\frac{(\\alpha+k-1)}{(\\alpha + \\beta +n-2)}.$$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can obtain (9) by solving:\n",
     "\n",
-    "which is the same as:\n",
-    "\n",
-    "$$\\text{p_MAP}  = \\frac{(\\alpha+k-1)}{(\\alpha + \\beta +n-2)}.$$"
+    "(10) $$\\frac{\\partial}{\\partial p}\\text{pdf}(p|\\alpha+k,\\beta+(n-k))=0,$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which is equivallent to solving:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(11) $$\\frac{\\partial}{\\partial p} p^{\\alpha+k-1}(1-p)^{\\beta+n-k-1}=0.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After calculating the derivative we get:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(12) $$(\\alpha+k-1)p^{\\alpha+k-2}(1-p)^{\\beta+n-k-1}+(\\beta+n-k-1)p^{\\alpha+k-1}(1-p)^{\\beta+n-2}=0.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which can be written as:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(13) $$p^{\\alpha+k-2}(1-p)^{\\beta+n-k-2}\\left[(\\alpha+k-1)-p(\\alpha+\\beta+n-2)\\right]=0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A good mathematician would immediately see that  (13) leads directly to (9)."
    ]
   },
   {
