--- a/ML_2021_set6.ipynb
+++ b/ML_2021_set6.ipynb
@@ -561,7 +561,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see the mode p_MAP is close to the expected value of the mode estimator $\\sim 0.6$."
+    "We can see the mode p_MAP is close to the value obtained using (9) which is $0.6$."
    ]
   },
   {
