--- a/ML_2021_set6.ipynb
+++ b/ML_2021_set6.ipynb
@@ -1039,11 +1039,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "For logistic regression we have:\n",
+    "    \n",
+    "(46) $$f_{\\theta}(x)=\\frac{1}{1+e^{-\\text{decision_boundary(x)}}}=\\frac{1}{1+e^{-(\\theta_{1}x+\\theta_{0})}}.$$\n",
+    "\n",
+    "(disclaimer! in general $\\text{decision_boundary}(x)\\neq \\theta_{0}x+\\theta_{1}$ but I took some creative liberty here)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let us write the condition for decision boundary:\n",
+    "    \n",
+    "(47) $$f_{\\theta}(x)=\\frac{1}{1+e^{-\\text{decision_boundary(x)}}}=\\text{treshold}.$$   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Having obtained (47) we can solve (47) for the decision_boundary(x):\n",
+    "    \n",
+    "(48) $$\\text{decision_boundary}(x)=\\theta_{1}x+\\theta_{0}=\\text{log}\\left(\\frac{\\text{treshold}}{1-\\text{treshold}}\\right).$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Naturally, for $treshold=\\frac{1}{2}$ we end up with:\n",
+    "    \n",
+    "(49) $$\\text{decision_boundary}(x)=\\theta_{1}x+\\theta_{0}=0.$$"
+   ]
   },
   {
    "cell_type": "markdown",
