--- a/ML_2021_set6.ipynb
+++ b/ML_2021_set6.ipynb
@@ -843,18 +843,116 @@
     "### Problem 42\n",
     "We consider a linear regression model. Let’s assume that the error model is additive $y= f(x) + \\epsilon$ , and errors are have Gaussian distribution with 0 mean ($E[\\epsilon] =0$) and variance\n",
     "($\\text{Var}[\\epsilon] =\\sigma^2$). We In addition, assume that our parameters are described by:\n",
-    "* Gaussian Distribution, with 0 mean, and some variance\n",
-    "* Laplace Distribution, with 0 mean, and some variance\n",
+    "\n",
+    "a). Gaussian Distribution, with 0 mean, and some variance\n",
+    "\n",
+    "b). Laplace Distribution, with 0 mean, and some variance\n",
+    "\n",
     "Derive the minimization problem starting from the MAP approach, taking into account the prior distribution of the parameters."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "https://bjlkeng.github.io/posts/probabilistic-interpretation-of-regularization/"
+    "$$\\Theta_{MAP}=\\text{argmax}\\left[log\\left(P(y|\\theta)\\right)+log\\left(P(\\theta)\\right)\\right].$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For ordinary linear regression:\n",
+    "    \n",
+    "(1) $$log\\left[P(y|\\theta)\\right]=log\\left(\\prod_{i}^{n}\\frac{1}{\\sigma\\sqrt{2\\pi}}e^{-\\frac{(y-(\\theta_{1}x_{i}+\\theta_{0}))^{2}}{2\\sigma^{2}}}\\right)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For gaussian prior:\n",
+    "\n",
+    "(2) $$log\\left[P(\\theta)\\right]=log\\left(\\frac{1}{\\tau\\sqrt{2\\pi}}e^{-\\frac{(\\theta_{0}^{2}+\\theta_{1}^{2})}{2\\tau^{2}}}\\right).$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For laplacian prior:\n",
+    "\n",
+    "(3) $$log\\left[P(\\theta)\\right]=log\\left(\\frac{1}{2b}e^{-\\frac{(|\\theta_{0}|+|\\theta_{1}|)}{2b}}\\right)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### a)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\Theta_{MAP}=\\text{argmax}((1)+(2))=\\text{argmax}\\left[log\\left(\\prod_{i}^{n}\\frac{1}{\\sigma\\sqrt{2\\pi}}e^{-\\frac{(y-(\\theta_{1}x_{i}+\\theta_{0}))^{2}}{2\\sigma^{2}}}\\right)+log\\left(\\frac{1}{\\tau\\sqrt{2\\pi}}e^{-\\frac{(\\theta_{0}^{2}+\\theta_{1}^{2})}{2\\tau^{2}}}\\right)\\right]=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$=\\text{argmax}\\left[-\\sum_{i=1}^{n}\\frac{y_{i}-(\\theta_{1}x+\\theta_{0})}{2\\sigma^{2}}-\\left(\\frac{\\theta_{1}^{2}+\\theta_{0}^{2}}{2\\tau^{2}}\\right)\\right]=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$=\\text{argmin}\\left[\\frac{1}{2\\sigma^{2}}\\left(\\sum_{i=1}^{n}(y_{i}-(\\theta_{1}x+\\theta_{0}))\\right)+\\frac{\\sigma^{2}}{\\tau^{2}}\\left(\\theta_{1}^{2}+\\theta_{0}^{2}\\right)\\right]=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$=\\text{argmin}\\left[\\sum_{i=1}^{n}\\left(y_{i}-(\\theta_{1}x+\\theta_{0})\\right)^{2}+\\lambda(\\theta_{1}^{2}+\\theta_{0}^{2})\\right].$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### b)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\Theta_{MAP}=\\text{argmax}((1)+(3))=\\text{argmax}\\left[log\\left(\\prod_{i}^{n}\\frac{1}{\\sigma\\sqrt{2\\pi}}e^{-\\frac{(y-(\\theta_{1}x_{i}+\\theta_{0}))^{2}}{2\\sigma^{2}}}\\right)+log\\left(\\frac{1}{2b}e^{-\\frac{|\\theta_{0}|+|\\theta_{1}|}{2b}}\\right)\\right]=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$=\\text{argmax}\\left[-\\sum_{i=1}^{n}\\frac{y_{i}-(\\theta_{1}x+\\theta_{0})}{2\\sigma^{2}}-\\left(\\frac{|\\theta_{1}|+|\\theta_{0}|}{2b}\\right)\\right]=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$=\\text{argmin}\\left[\\frac{1}{2\\sigma^{2}}\\left(\\sum_{i=1}^{n}(y_{i}-(\\theta_{1}x+\\theta_{0}))\\right)+\\frac{\\sigma^{2}}{b}\\left(|\\theta_{1}|+|\\theta_{0}|\\right)\\right]=$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$=\\text{argmin}\\left[\\sum_{i=1}^{n}\\left(y_{i}-(\\theta_{1}x+\\theta_{0})\\right)^{2}+\\lambda(|\\theta_{1}|+|\\theta_{0}|)\\right].$$"
    ]
   },
   {
@@ -1055,7 +1153,7 @@
    "source": [
     "Now let us write the condition for decision boundary:\n",
     "    \n",
-    "(47) $$f_{\\theta}(x)=\\frac{1}{1+e^{-\\text{decision_boundary(x)}}}=\\text{treshold}.$$   "
+    "(47) $$f_{\\theta}(x)=\\frac{1}{1+e^{-\\text{decision_boundary(x)}}}=\\text{threshold}.$$   "
    ]
   },
   {
@@ -1064,14 +1162,14 @@
    "source": [
     "Having obtained (47) we can solve (47) for the decision_boundary(x):\n",
     "    \n",
-    "(48) $$\\text{decision_boundary}(x)=\\theta_{1}x+\\theta_{0}=\\text{log}\\left(\\frac{\\text{treshold}}{1-\\text{treshold}}\\right).$$"
+    "(48) $$\\text{decision_boundary}(x)=\\theta_{1}x+\\theta_{0}=\\text{log}\\left(\\frac{\\text{threshold}}{1-\\text{threshold}}\\right).$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Naturally, for $treshold=\\frac{1}{2}$ we end up with:\n",
+    "Naturally, for $\\text{threshold}=\\frac{1}{2}$ we end up with:\n",
     "    \n",
     "(49) $$\\text{decision_boundary}(x)=\\theta_{1}x+\\theta_{0}=0.$$"
    ]
