4 problems left  to do 36, 41, 47, 48!

--- a/ML_2021_set6.ipynb
+++ b/ML_2021_set6.ipynb
@@ -812,12 +812,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "For "
+    "For $\\lambda \\approx 0$ the procedure effectively works like ordinary least squares method without regularisation. We have low bias high variance. \n",
+    "\n",
+    "For $\\lambda \\rightarrow 1$ the fit error goes to infinity and $\\theta_{j}\\rightarrow 0$. We have very high bias and extremly low variance."
    ]
   },
   {
@@ -1108,31 +1108,45 @@
     " \n",
     "FALSE \n",
     "\n",
+    "The whole concept of regularisation is to make the error function more sensitive. We effectively add an extra assumption about data which results in the introduction of an addition positive term, which acts as a punishment for increased complexity.\n",
+    "\n",
     "* Adding new features to your model would make the training error higher or the same\n",
     "\n",
     "FLASE/TRUE\n",
     "\n",
-    "* Adding regularization would typically lower the test error\n",
+    "It depends. The number of features should be \"just right\". We want to land in a sweet spot of the bias-variance trade-off.\n",
+    "\n",
+    "* Adding regularisation would typically lower the test error\n",
     "\n",
     "TRUE\n",
     "\n",
-    "* Adding regularization can cause overfitting of your model\n",
+    "Yes! Adding regularisation increases the generalisation power of our algorithm.\n",
+    "\n",
+    "* Adding regularisation can cause overfitting of your model\n",
     "\n",
     "FALSE\n",
+    "\n",
+    "Adding reguralisation decreases complexity and thus in a sense counteracts overfitting.\n",
     "\n",
     "* Using a large value of the lambda parameter can cause the overfitting of your model\n",
     "\n",
     "FALSE\n",
     "\n",
+    "Quite the opposite. We reduce complexity and variance at the expense of growing bias.\n",
     "\n",
-    "* Adding regularization can introduce the bias to your model\n",
+    "\n",
+    "* Adding regularisation can introduce bias to your model\n",
     "\n",
     "TRUE\n",
     "\n",
-    "* Adding regularization can make the training error higher\n",
+    "As we increase lambda the importance of the punishment term is growing. At some point it starts to dominate pushing the fit parameter values to 0. As a result, we end up with extremly high bias.\n",
+    "\n",
+    "* Adding regularisation can make the training error higher\n",
     "\n",
     "\n",
-    "TRUE"
+    "TRUE\n",
+    "\n",
+    "For $\\lambda \\rightarrow \\infty$ the training error goes to ininity as well."
    ]
   },
   {
