36 and 41 left to do!

--- a/ML_2021_set6.ipynb
+++ b/ML_2021_set6.ipynb
@@ -1335,20 +1335,35 @@
    "metadata": {},
    "source": [
     "### Problem 47\n",
-    "* For which value of K K-fold cross-validation is equivalent to Leave-one-out method?\n",
-    "* Order the cross-validation methods (K-fold e.g. K=5, leave-one-out and the simple splitting into validation and training sets) in the ascending cost of the computation power\n",
-    "* For which K the K-fold cross-validation requires the most of the computing power?\n",
+    "\n",
+    "a). For which value of K K-fold cross-validation is equivalent to Leave-one-out method?\n",
+    "\n",
+    "b). Order the cross-validation methods (K-fold e.g. K=5, leave-one-out and the simple splitting into validation and training sets) in the ascending cost of the computation power\n",
+    "\n",
+    "c). For which K the K-fold cross-validation requires the most of the computing power?\n",
     "\n",
     "Justify your answers"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    ":("
+    "a). K=N, where N is the number of data points dedicated for training+validation. For each step of cross validation N-1 data will be used for training and 1 data point will be used for validation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b). simple splitting, K-fold (K<N), leave-one-out. (highest computatuonal power)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c). For K=N, the largest number of operations. We train our data N times. For K-fold we train our data only K times. For simple splitting only once."
    ]
   },
   {
@@ -1357,10 +1372,26 @@
    "source": [
     "### Problem 48\n",
     "We consider two cases of binary classifier tests:\n",
-    "* A - airplanes security checks before the take-off (Y=’allowed’/’denied’)\n",
-    "* B - decision if according to her/his profile a client will be potentially interested to buy a new product and if to show her/him the targeted advertisement(Y=’yes’/’no’)\n",
+    "\n",
+    "a). A - airplanes security checks before the take-off (Y=’allowed’/’denied’)\n",
+    "\n",
+    "b). B - decision if according to her/his profile a client will be potentially interested to buy a new product and if to show her/him the targeted advertisement(Y=’yes’/’no’)\n",
     "\n",
     "How would we decide how to tune our classifier threshold for each case in the context of sensitivity vs specificity trade-off? Justify your answer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a). We need the highest possible sensitivity for damage at the expence of specificity. It is better to detect some FP security risks than have the whole crew and passengers ripped into pieces."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b). In my opinion in this case we should apply the same strategy as in point (a). On one hand, It won't be the end of the World if we show them a mistargeted advertisment (high sensitivity and low specificity). On the other hand, there might be some studies on this issue suggesting otherwise. By the way of example, I can imagine people getting angry with being shown adverts not tailored to their needs."
    ]
   },
   {
@@ -1368,9 +1399,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    ":("
-   ]
+   "source": []
   }
  ],
  "metadata": {
