--- a/ML_2021_set6.ipynb
+++ b/ML_2021_set6.ipynb
@@ -1391,7 +1391,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b). In my opinion in this case we should apply the same strategy as in point (a). On one hand, It won't be the end of the World if we show them a mistargeted advertisment (high sensitivity and low specificity). On the other hand, there might be some studies on this issue suggesting otherwise. By the way of example, I can imagine people getting angry with being shown adverts not tailored to their needs."
+    "b). In my opinion in this case we should apply the same strategy as in point (a). On one hand, It won't be the end of the World if we show them a mistargeted advertisment (high sensitivity and low specificity). On the other hand, there might be some studies on this issue suggesting otherwise. By the way of example, I can imagine people getting angry whilst being shown adverts not tailored to their needs."
    ]
   },
   {
