--- a/ML_2021_set6.ipynb
+++ b/ML_2021_set6.ipynb
@@ -64,7 +64,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "pretty standard problem surely there is a solution out there!"
+    "k-NN is sensitive to feature scaling, the answer how can be found in the updated notebook with k-NN implementation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://github.com/kmiec96/ML2021_answer/blob/main/ML2021_set1.ipynb"
    ]
   },
   {
