--- a/ML_2021_set6.ipynb
+++ b/ML_2021_set6.ipynb
@@ -71,7 +71,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://github.com/kmiec96/ML2021_answer/blob/main/ML2021_set1.ipynb"
+    "Unfortunately, this notebook doesn't bring much insight into the qualitative behaviour of k-NN. In theory, normalisation/standarisation should increase stability. I changed WK's implementation of setosa-versicolor classifier into virginica-versicolor classifier in the attempt better visualise effects that stem from the differences in normalisation. Sadly, for virginica-versicolor k-nn classifier used on iris dataset there isn't any significant difference between results obtained for raw and normalised data. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://github.com/kmiec96/Modern-data-science/blob/main/ML2021_set1.ipynb"
    ]
   },
   {
