--- a/ML_2021_set7.ipynb
+++ b/ML_2021_set7.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solutions to Modern Data Science Problems (probelms till 22.01)\n",
+    "# Solutions to Modern Data Science Problems (probelms till 22.01 and 5.02)\n",
+    "disclaimer: none optional problems presented here!\n",
+    "I dedicated a separated notebook to them.\n",
     "\n",
     "*by Mateusz Kmieć*"
    ]
@@ -43,18 +45,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.The best performance is for D since TPR=1 and FPR is 0.\n",
-    "\n",
-    "2.As far as A, B, C and E the usefulness of the chosen classifier is dependent on the classification problem.\n",
-    "\n",
-    "3.For A we have very low FPR and fairly high TPR. Such classifier could be useful for detection of crime. We don't want to falsely accuse somebody of crime. \n",
-    "\n",
-    "4.As fas as B is concerned It has quite high TPR and less than satisfactory FPR. It might be useful for COVID detection. We have high TPR at the expense of FPR. In the case of COVID detection we are not as much concerned with high FPR results detection as we are with low TPR. It is better to be careful than sorry. At worst people are classified as ill and have to quarantine for two weeks. In the opposite case we are at risk of causing accelerated spread of the deadly disease.\n",
-    "\n",
-    "\n",
-    "5.As for C it lies almost on the random guessing line and so we have nearly no predictive power.\n",
-    "\n",
-    "6.On the one hand for E we have a very high FPR and low TPR and so it is the worst classifier, it is even worse than C. On the other hand we could invert the condition of this classifier and obtain a classifier with a decent predictive power."
+    "1. The best performance is for D since TPR=1 and FPR is 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. As far as A, B, C and E the usefulness of the chosen classifier is dependent on the classification problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. For A we have very low FPR and fairly high TPR. Such classifier could be useful for detection of crime. We don't want to falsely accuse somebody of crime. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. As fas as B is concerned It has quite high TPR and less than satisfactory FPR. It might be useful for COVID detection. We have high TPR at the expense of FPR. In the case of COVID detection we are not as much concerned with high FPR results detection as we are with low TPR. It is better to be careful than sorry. At worst people are classified as ill and have to quarantine for two weeks. In the opposite case we are at risk of causing accelerated spread of the deadly disease."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. As for C it lies almost on the random guessing line and so we have nearly no predictive power."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6. On the one hand for E we have a very high FPR and low TPR and so it is the worst classifier, it is even worse than C. On the other hand we could invert the condition of this classifier and obtain a classifier with a decent predictive power."
    ]
   },
   {
@@ -90,7 +116,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "None of them."
+    "None of them. We cannot even guarantee their convergence and when they converge it is a convergence to the local minimum. Newton-method usually converges much faster than GD. Newton-method invlolves inverting hessian. For high dimensions Hessian might be too expensive to \n",
+    "invert. Although for large sets of data the best convergence is usually observed for ADAM, the best generalisation power is attributed to SGD-like methods."
    ]
   },
   {
@@ -108,11 +135,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Newton-method usually converges much faster than GD. Newton-method invlolves inverting hessian. For high dimensions Hessian might be too expensive to \n",
+    "invert. GD might turn out to be too computationally expensive for large datasets that is why  for large sets of data we should use SGD or Adam. At some point Adam was a recommended over SGD (lower training errors, faster convergence).\n",
+    "This recommendation is questioned by several studies (SGD-like methods generalize better in \n",
+    "many cases than Adam-like methods)."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -158,9 +188,63 @@
    "source": [
     "### Problem 57\n",
     "Which of the statements are true?\n",
-    "* Newton's method uses information about the Hessian.\n",
-    "* GD uses information about the Hessian.\n",
-    "* Newton' method in many cases can converge faster than GD but it can be very expensive for multidimensional data."
+    "\n",
+    "1. Newton's method uses information about the Hessian. True (It uses both gradient and hessian)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. GD uses information about the Hessian. False (It uses only gradient)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Newton's method in many cases can converge faster than GD but it can be very expensive for multidimensional data.  True (Inverting hessian has high computational cost)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem 58\n",
+    "\n",
+    "Consider document classifier with k classes. Every document is described by at least p\n",
+    "ordered words (features). Every word belongs to the dictionary of m values. How many\n",
+    "parameters we must estimate for:\n",
+    "\n",
+    "• Bayes classifier\n",
+    "\n",
+    "• Naive Bayes classifier\n",
+    "\n",
+    "• Naive Bayes classifier with the bag-of-model assumption"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem 59\n",
+    "\n",
+    "Consider Laplacian smoothing for $k=2$. Discuss cases of:\n",
+    "    \n",
+    "• $\\alpha = 0.5$\n",
+    "\n",
+    "• $\\alpha = 1$\n",
+    "\n",
+    "• $\\alpha = 0$\n",
+    "\n",
+    "with respect to freqency prediction #$x_{i}$/#$y$."
    ]
   },
   {
