--- a/ML_2021_set7.ipynb
+++ b/ML_2021_set7.ipynb
@@ -102,21 +102,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 53\n",
+    "### Problem 53\n",
     "For which method, there is a guarantee that it will converge to the global minimum. Justify your choice if possible:\n",
-    "* GD\n",
-    "* SGD\n",
-    "* ADAM\n",
-    "* Newton’s method\n",
-    "* All of them\n",
-    "* None of them"
+    "\n",
+    "1. GD\n",
+    "\n",
+    "2. SGD\n",
+    "\n",
+    "3. ADAM\n",
+    "\n",
+    "4. Newton’s method\n",
+    "\n",
+    "5. All of them\n",
+    "\n",
+    "6. None of them"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "None of them. We cannot even guarantee their convergence and when they converge it is a convergence to the local minimum. Newton-method usually converges much faster than GD. Newton-method invlolves inverting hessian. For high dimensions Hessian might be too expensive to \n",
+    "None of them. We cannot even guarantee their convergence and when they converge it is a convergence to the local minimum. However we can expect them to converge to the global minimum for purely convex functions.  Newton-method usually converges much faster than GD. Newton-method invlolves inverting hessian. For high dimensions Hessian might be too expensive to \n",
     "invert. Although for large sets of data the best convergence is usually observed for ADAM, the best generalisation power is attributed to SGD-like methods."
    ]
   },
@@ -126,12 +132,13 @@
    "source": [
     "### Problem 54\n",
     "We use a large dataset with a multidimensional features space. Which method would be probably appropriate to use? Justify your choice if possible\n",
-    "* GD\n",
-    "* SGD\n",
-    "* ADAM\n",
-    "* Newton’s method\n",
-    "* All of them\n",
-    "* None of them"
+    "\n",
+    "1. GD\n",
+    "2. SGD\n",
+    "3. ADAM\n",
+    "4. Newton’s method\n",
+    "5. All of them\n",
+    "6. None of them"
    ]
   },
   {
@@ -150,10 +157,14 @@
    "source": [
     "### Problem 55\n",
     "Which of the statements are true?\n",
-    "* SGD is guaranteed to decrease the cost function in every iteration\n",
-    "* SGD uses small subsample (or one sample) to update the parameters\n",
-    "* When using SGD we don't need to randomize the data sample\n",
-    "* When using GD we don't need to randomize the data sample"
+    "\n",
+    "1. SGD is guaranteed to decrease the cost function in every iteration\n",
+    "\n",
+    "2. SGD uses small subsample (or one sample) to update the parameters\n",
+    "\n",
+    "3. When using SGD we don't need to randomize the data sample\n",
+    "\n",
+    "4. When using GD we don't need to randomize the data sample"
    ]
   },
   {
@@ -169,10 +180,14 @@
    "source": [
     "### Problem 56\n",
     "Which of the statements are true?\n",
-    "* GD with a very small learning rate can be ineffective in a sense that it would take a lot of time to find the solution (to converge).\n",
-    "* SGD with a very large learning rate can be ineffective in a sense that it would take a lot of time to find the solution (to converge).\n",
-    "* If we choose small enough learning rate, then we are guaranteed to converge to the same solution independent on the initial values.\n",
-    "* When the value of learning rate is too large then we can \"overshoot\" the solution."
+    "\n",
+    "1. GD with a very small learning rate can be ineffective in a sense that it would take a lot of time to find the solution (to converge).\n",
+    "\n",
+    "2. SGD with a very large learning rate can be ineffective in a sense that it would take a lot of time to find the solution (to converge).\n",
+    "\n",
+    "3. If we choose small enough learning rate, then we are guaranteed to converge to the same solution independent on the initial values.\n",
+    "\n",
+    "4. When the value of learning rate is too large then we can \"overshoot\" the solution."
    ]
   },
   {
